nodeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: test-ns
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      name: nodeapp
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: dockerhandson/node-app-mss:1
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "300Mi"
            cpu: "200m"
        ports:
        - name: nodeapp-port
          containerPort: 9981

---
apiVersion: v1
kind: Service
metadata:
  name: nodeappsvc
  namespace: test-ns
spec:
  type: LoadBalancer
  selector:
    app: nodeapp
  ports:
  - port: 80
    targetPort: nodeapp-port
